--- a/package.xml
+++ b/package.xml
@@ -7,8 +7,7 @@
   <maintainer email="kaito160306@gmail.com">Kaito Suzuki</maintainer>
   <license>BSD-3-Clause</license>
   <exec_depend>rclpy</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>launch_ros</exec_depend>
+  <exec_depend>std_msgs</exec_deped>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
